unpackaged/main/default/objects/Customer_Milestone_Type_Setting__mdt/Customer_Milestone_Type_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Customer Milestone Type Setting</label>
    <pluralLabel>Customer Milestone Type Settings</pluralLabel>
</CustomObject>