unpackaged/main/default/objects/Customer_Milestone_Type_Setting__mdt/fields/Request_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Request_by_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request by Sales?</label>
    <type>Checkbox</type>
</CustomField>