unpackaged/main/default/objects/Customer_Milestone_Type_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kick-off</fullName>
                <default>true</default>
                <label>Kick-off</label>
            </value>
            <value>
                <fullName>Success Plan</fullName>
            </value>
            <value>
                <fullName>Customer Activated</fullName>
            </value>
            <value>
                <fullName>Primary Value Moment</fullName>
            </value>
            <value>
                <fullName>Services Complete</fullName>
            </value>
            <value>
                <fullName>Hackathon</fullName>
            </value>
            <value>
                <fullName>Technical Enablement</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Red Account</fullName>
            </value>
            <value>
                <fullName>Renewal Kick-off</fullName>
            </value>
            <value>
                <fullName>Post-mortem</fullName>
            </value>
            <value>
                <fullName>Upgrade Plan</fullName>
            </value>
            <value>
                <fullName>Roadmap Review</fullName>
            </value>
            <value>
                <fullName>App Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>